# rusty-todos

./: .gitignore  Cargo.toml  README.md  STEPS.md  tasks.json
.cargo/: config.toml
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/rustytodos/: MainActivity.kt  RustBindings.kt  RustyTodosApplication.kt
android/app/src/main/java/com/example/rustytodos/data/: AppContainer.kt  AppDatabase.kt  RoomTodoRepository.kt  RustTodoRepository.kt  Task.kt  TaskDao.kt  TodoRepository.kt
android/app/src/main/java/com/example/rustytodos/ui/: AppViewModelProvider.kt  TodoScreen.kt  TodoViewModel.kt
android/app/src/main/java/com/example/rustytodos/ui/theme/: Color.kt  Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
rusty_todo/: Cargo.toml
rusty_todo/src/: error.rs  lib.rs  state.rs
rusty_todo_cli/: Cargo.toml
rusty_todo_cli/src/: main.rs
rusty_todo_jni/: Cargo.toml
rusty_todo_jni/src/: lib.rs
src/: main.rs
